--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ mdurl==0.1.2
 orjson==3.10.18
 packaging==25.0
 pluggy==1.6.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
+psycopg-pool==3.2.6
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.4
