--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pydantic_core==2.33.2
 Pygments==2.19.1
 pytest==8.3.5
 pytest-asyncio==0.26.0
+pytest-dotenv==0.5.2
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
@@ -48,6 +49,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+SQLAlchemy-Utils==0.41.2
 starlette==0.46.2
 typer==0.15.4
 typing-inspection==0.4.0
